# DecisionAtlas

./: .env.example  .gitignore  CODEOWNERS  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml
services/engine/: alembic.ini  pyproject.toml
services/engine/alembic/: env.py
services/engine/alembic/versions/: 0001_initial_schema.py  0002_add_import_jobs.py  0003_add_import_job_summary.py
services/engine/app/: config.py  main.py  provenance.py
services/engine/app/api/: dashboard.py  decisions.py  drift.py  health.py  imports.py  query.py  runtime.py  timeline.py
services/engine/app/db/: models.py  seed_demo.py  session.py
services/engine/app/drift/: __init__.py  evaluator.py  rule_extractor.py  rule_types.py  rules.py  semantic_classifier.py  semantic_recall.py
services/engine/app/extractor/: parser.py  pipeline.py  prompt_loader.py
services/engine/app/indexing/: chunker.py  embedder.py  index_artifact.py
services/engine/app/ingest/: file_discovery.py  github_client.py  github_document_selection.py  github_importer.py  github_types.py  markdown_importer.py  pandoc_adapter.py  text_importer.py
services/engine/app/jobs/: import_jobs.py
services/engine/app/llm/: base.py  fake_provider.py  openai_compatible.py  provider_factory.py
services/engine/app/observability/: logging.py
services/engine/app/outcomes/: real_workspaces.py
services/engine/app/repositories/: artifact_chunks.py  artifacts.py  decisions.py  drift_alerts.py  import_jobs.py  (+2 more)
services/engine/tests/: test_health.py  test_import_jobs.py  test_provenance.py
(+225 files in other folders)
